删除可用余额和积分

--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -1,18 +1,8 @@
 <view class="container">
-	<view class="userinfo">
-		<image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
-		<text class="userinfo-nickname">{{ userInfo.nickName }}</text>
-	</view>
-  <view class="asset">
-    <view class='item' bindtap='goAsset'>
-      <view>{{balance}}</view>
-      <view>可用余额</view>
-    </view>
-    <view class='item right' bindtap='goScore'>
-      <view>{{score}}</view>
-      <view>剩余积分</view>
-    </view>
-  </view>
+  <view class="userinfo">
+    <image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
+    <text class="userinfo-nickname">{{ userInfo.nickName }}</text>
+  </<view>
   <view style="height:10rpx;background: #eee;width:100%;"></view>
   <view class="my-item">
     <navigator url="/pages/order-list/index" hover-class="navigator-hover">我的订单</navigator>
@@ -44,7 +34,7 @@
   </view>
   <view class="my-item">
     <navigator url="/pages/score-excharge/index" hover-class="navigator-hover">积分兑换</navigator>
-  </view>  
+  </view>
   <view class="my-item">
     <navigator url="/pages/select-address/index" hover-class="navigator-hover">收货地址</navigator>
   </view>
@@ -66,7 +56,7 @@
   <view class="my-item" style="border:none;padding:0rpx;margin:0rpx;background:none;border:none;height:auto;line-height:auto;">
     <button type="warn" bindtap="relogin">重新授权登录</button>
   </view>
-  
+
   <view style="height:20rpx;background: #eee;width:100%;"></view>
   <view class="version">Powered by EastWorld v {{version}}</view>
   <view style="height:20rpx;background: #eee;width:100%;"></view>
