--- a/pages/my/index.wxss
+++ b/pages/my/index.wxss
@@ -13,20 +13,12 @@
 .userinfo-avatar {
 	width: 160rpx;
 	height: 160rpx;
+  border-radius: 50%;
 }
 .userinfo-nickname {
   margin-top: 20rpx;
   margin-bottom: 20rpx;
   font-size: 14px;
-}
-
-.version {
-  width:100%;
-  height: 40rpx;
-	line-height: 40rpx;
-	font-size: 24rpx;
-	text-align: center;  
-  padding: 40rpx;
 }
 
 .my-item{
