--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,14 +11,14 @@
 }
 .swiper_box {
   width: 100%;
-  height:562.5rpx;
+  height:300rpx;
 }
 
-swiper-item image {
+.swiper-container image {
   width: 100%;
   display: inline-block;
   overflow: hidden;
-  height:562.5rpx;
+  height:300rpx;
 }
 .swiper-container .dots{
   position: absolute;
@@ -42,32 +42,32 @@ swiper-item image {
   opacity: 1;
 }
 
-.type-navbar{
-  white-space: nowrap;
-  height: 88rpx;
-  width: 100%;
-  background-color: #fff;
-}
-::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  color: transparent;
-}
-.type-box{
-  width:160rpx;
-  box-sizing: content-box;
-  font-size: 24rpx;
-  line-height: 84rpx;
-  text-align: center;
-  display: inline-block;
-  overflow: hidden;
-}
-.type-navbar-item{
-  border-bottom: 4rpx solid #fff;
-}
-.type-item-on{
-  border-bottom: 4rpx solid #e64340;
-}
+/*.type-navbar{*/
+  /*white-space: nowrap;*/
+  /*height: 88rpx;*/
+  /*width: 100%;*/
+  /*background-color: #fff;*/
+/*}*/
+/*::-webkit-scrollbar {*/
+  /*width: 0;*/
+  /*height: 0;*/
+  /*color: transparent;*/
+/*}*/
+/*.type-box{*/
+  /*width:160rpx;*/
+  /*box-sizing: content-box;*/
+  /*font-size: 24rpx;*/
+  /*line-height: 84rpx;*/
+  /*text-align: center;*/
+  /*display: inline-block;*/
+  /*overflow: hidden;*/
+/*}*/
+/*.type-navbar-item{*/
+  /*border-bottom: 4rpx solid #fff;*/
+/*}*/
+/*.type-item-on{*/
+  /*border-bottom: 4rpx solid #e64340;*/
+/*}*/
 
 .goods-container{
   display: flex;
@@ -163,29 +163,29 @@ swiper-item image {
   top: 0;
   left: 0;
 }
-.coupons{
-  margin-top:10rpx;
-  width: 100%;
-  height: 180rpx;
-  overflow: hidden;
-}
-.coupons-scroll{
-  white-space: nowrap;
-  height: 180rpx;
-  width: 100%;
-  background-color: #fff;
-}
-.coupons-item{
-  width:300rpx;
-  height: 180rpx;
-  margin: 10rpx;
-  padding-top: 20rpx;
-  padding-left: 15rpx;
-  background-color: #f1a83b;
-  box-sizing: content-box;
-  font-size: 20rpx;
-  line-height: 35rpx;
-  overflow: hidden;
-  color: #fff;
-  display: inline-block;
-}
+/*.coupons{*/
+  /*margin-top:10rpx;*/
+  /*width: 100%;*/
+  /*height: 180rpx;*/
+  /*overflow: hidden;*/
+/*}*/
+/*.coupons-scroll{*/
+  /*white-space: nowrap;*/
+  /*height: 180rpx;*/
+  /*width: 100%;*/
+  /*background-color: #fff;*/
+/*}*/
+/*.coupons-item{*/
+  /*width:300rpx;*/
+  /*height: 180rpx;*/
+  /*margin: 10rpx;*/
+  /*padding-top: 20rpx;*/
+  /*padding-left: 15rpx;*/
+  /*background-color: #f1a83b;*/
+  /*box-sizing: content-box;*/
+  /*font-size: 20rpx;*/
+  /*line-height: 35rpx;*/
+  /*overflow: hidden;*/
+  /*color: #fff;*/
+  /*display: inline-block;*/
+/*}*/
