--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -56,16 +56,14 @@
     <!--</scroll-view>-->
   <!--</view>-->
   <view class="goods-container">
+    <view class="goods-header">餐具产品</view>
     <view class="goods-box" wx:for-items="{{goods}}" wx:key="{{index}}" bindtap="toDetailsTap" data-id="{{item.id}}">
       <view class="img-box">
         <image src="{{item.pic}}_m" class="image" mode="aspectFill" lazy-load="true"/>
       </view>
-      <view class="goods-title">{{item.name}}</view>
-      <view style='display:flex;'>
+      <view class="goods-detail">
+        <view class="goods-title">{{item.name}}</view>
         <view class="goods-price">¥ {{item.minPrice}}</view>
-        <view wx:if="{{item.originalPrice && item.originalPrice > 0}}" class="goods-price"
-              style='color:#aaa;text-decoration:line-through'>¥ {{item.originalPrice}}
-        </view>
       </view>
     </view>
   </view>
