--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -88,7 +88,7 @@
 .goods-header::before{
   content: "";
   margin-right: 15rpx;
-  border-left: 5rpx solid;
+  border-left: 8rpx solid;
   border-left-color: #f22d47;
 }
 .goods-box{
@@ -96,18 +96,17 @@
   width: 90%;
   height: 300rpx;
   margin: auto;
-  background-color: #fff;
   overflow: hidden;
-  margin-bottom: 24rpx;
-  border: 1px solid #eee;
-  /*box-shadow: 4rpx 10rpx 10rpx #f2f2f2;*/
-  box-shadow: ;
-  border-top: none;
+  margin-bottom: 36rpx;
+  box-shadow: 0 -2rpx 8rpx 0 #fff,-5rpx 5rpx 8rpx 0 #eee,5rpx 12rpx 8rpx 0 #eee,0 10rpx 18rpx 5rpx #eee;
+  align-items: center;
+  justify-content: center;
 }
 .goods-box .img-box{
   width: 339rpx;
   height: 200rpx;
   border: 2px solid #f0f0f0;
+  border-radius: 10rpx;
   overflow: hidden;
 }
 .goods-box .img-box image{
