--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -67,5 +67,12 @@
       </view>
     </view>
   </view>
+  <view class="partner-container">
+    <view class="partner-title">合作伙伴</view>
+    <view class="partner-item" wx:for-items="{{partners}}" wx:key="{{index}}">
+      <image src="{{item.picUrl}}_m" class="image" mode="aspectFill" lazy-load="true"/>
+      <view class="partner-name">- {{item.title}} -</view>
+    </view>
+  </view>
   <view hidden="{{loadingMoreHidden ? true : false}}" class="no-more-goods">没有更多啦</view>
 </view>
