--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -70,7 +70,7 @@
 /*.type-item-on{*/
   /*border-bottom: 4rpx solid #e64340;*/
 /*}*/
-.goods-container{
+.goods-container, .partner-container{
   display: flex;
   justify-content: space-between;
   flex-wrap:wrap;
@@ -78,14 +78,14 @@
   box-sizing: content-box;
   padding: 15rpx 0;
   border-radius: 10rpx;
-  margin-top: 10rpx;
+  margin-top: 20rpx;
 }
-.goods-header{
+.goods-header, .partner-title{
   padding: 10rpx 30rpx 20rpx;
   font-size: 24rpx;
   font-weight: bolder;
 }
-.goods-header::before{
+.goods-header::before,.partner-title::before{
   content: "";
   margin-right: 15rpx;
   border-left: 8rpx solid;
@@ -119,7 +119,6 @@
   /*justify-content: space-between;*/
 }
 .goods-box .goods-title{
-  /*width: 280rpx;*/
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -135,6 +134,25 @@
   padding: 24rpx 0;
   color:#e64340;
   margin-left: 24rpx;
+}
+.partner-container .partner-item{
+  width: 100%;
+  /*background-color: rgba(0,0,0,0.6);*/
+  margin-bottom: 50rpx;
+  border-radius: 10rpx;
+}
+.partner-item image{
+  width: 690rpx;
+  height: 210rpx;
+  padding: 0 30rpx;
+}
+.partner-name{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 50rpx;
+  display: flex;
+  justify-content: center;
 }
 .no-more-goods{
   text-align: center;
