--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -99,8 +99,14 @@
   overflow: hidden;
   margin-bottom: 36rpx;
   box-shadow: 0 -2rpx 8rpx 0 #fff,-5rpx 5rpx 8rpx 0 #eee,5rpx 12rpx 8rpx 0 #eee,0 10rpx 18rpx 5rpx #eee;
+}
+.goods-box .goods-item{
+  display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 30rpx;
 }
 .goods-box .img-box{
   width: 339rpx;
@@ -108,6 +114,7 @@
   border: 2px solid #f0f0f0;
   border-radius: 10rpx;
   overflow: hidden;
+  flex: 1;
 }
 .goods-box .img-box image{
    width: 339rpx;
@@ -115,44 +122,50 @@
 }
 .goods-box .goods-detail{
   /*display: flex;*/
+  flex: 1;
   /*flex-direction: row;*/
   /*justify-content: space-between;*/
+}
+.goods-box .goods-title, .goods-box .goods-price{
+  overflow: hidden;
+  font-size: 24rpx;
+  margin-left: 48rpx;
 }
 .goods-box .goods-title{
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
-  font-size: 24rpx;
-  padding: 24rpx 0 0rpx 0;
+  padding: 24rpx 0 0 0;
   color:#000;
-  margin-left: 24rpx;
 }
 .goods-box .goods-price{
-  /*width: 280rpx;*/
-  overflow: hidden;
-  font-size: 24rpx;
   padding: 24rpx 0;
   color:#e64340;
-  margin-left: 24rpx;
 }
 .partner-container .partner-item{
   width: 100%;
-  /*background-color: rgba(0,0,0,0.6);*/
-  margin-bottom: 50rpx;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 30rpx 30rpx;
   border-radius: 10rpx;
 }
 .partner-item image{
-  width: 690rpx;
+  width: 100%;
   height: 210rpx;
-  padding: 0 30rpx;
+  margin: auto;
+}
+.partner-modal{
+  position: absolute;
+  height: 210rpx;
+  width: 92%;
+  background-color: rgba(0, 0, 0, 0.36);
 }
 .partner-name{
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: 50rpx;
-  display: flex;
-  justify-content: center;
+  color: #fff;
+  font-size: 35rpx;
+  font-weight: bold;
+  position: absolute;
 }
 .no-more-goods{
   text-align: center;
