--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,7 +2,7 @@
 
 .container {
   font-family: PingFang SC, serif;
-  background-color: #f2f2f2;
+  background-color: #f8f8f8;
   min-height: 100%;
   display: block;
 }
@@ -18,10 +18,10 @@
 
 .swiper-container image {
   display: inline-block;
-  border-radius: 30rpx;
+  border-radius: 20rpx;
   overflow: hidden;
   width: 100%;
-  height: 300rpx;
+  height: 260rpx;
 }
 .swiper-container .dots{
   position: absolute;
@@ -96,7 +96,7 @@
 .goods-box{
   display: flex;
   width: 90%;
-  height: 300rpx;
+  height: 220rpx;
   margin: auto;
   overflow: hidden;
   margin-bottom: 36rpx;
@@ -111,16 +111,15 @@
   padding: 0 30rpx;
 }
 .goods-box .img-box{
-  width: 339rpx;
-  height: 200rpx;
+  width: 260rpx;
+  height: 180rpx;
   border: 2px solid #f0f0f0;
   border-radius: 10rpx;
   overflow: hidden;
-  flex: 1;
 }
 .goods-box .img-box image{
-   width: 339rpx;
-   height: 200rpx;
+   width: 260rpx;
+   height: 180rpx;
 }
 .goods-box .goods-detail{
   /*display: flex;*/
@@ -133,6 +132,11 @@
   font-size: 30rpx;
   margin-left: 48rpx;
 }
+.goods-wrap{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .goods-box .goods-title{
   font-family: PingFang SC Medium, sans-serif;
   text-overflow: ellipsis;
@@ -141,9 +145,22 @@
   color:#000;
 }
 .goods-box .goods-price{
-  font-family: MarkPro, sans-serif;
+  font-family: Mark Pro Regular, sans-serif;
   padding: 24rpx 0;
-  color:#e64340;
+  color:#ea5255;
+}
+.goods-select{
+  width: 126rpx;
+  height: 54rpx;
+  line-height: 54rpx;
+  border: 4rpx solid #ea5255;
+  border-radius: 14rpx;
+  /*padding: 10rpx;*/
+  text-align: center;
+  vertical-align: middle;
+  color: #ea5255;
+  font-size: 28rpx;
+  font-weight: bold;
 }
 .partner-container .partner-item{
   width: 100%;
