--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -1,43 +1,44 @@
 <view class="container">
   <view class="userinfo">
-    <image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
+    <!--<image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>-->
+    <image class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
     <text class="userinfo-nickname">{{ userInfo.nickName }}</text>
   </view>
-  <view style="height:10rpx;background: #eee;width:100%;"></view>
+  <view class="my-order">
+    <!--<navigator url="/pages/order-list/index" hover-class="navigator-hover" class="my-order-title">我的订单</navigator>-->
+    <view class="my-order-title">我的订单</view>
+    <view class='order-shortcut'>
+      <view class='item' bindtap='goOrder' data-type="0">
+        <image class="icon" src="/images/order/topay.png" background-size="cover"></image>
+        <view class='text'>待付款</view>
+      </view>
+      <view class='item' bindtap='goOrder' data-type="1">
+        <image class="icon" src="/images/order/fahuo.png" background-size="cover"></image>
+        <view class='text'>待发货</view>
+      </view>
+      <view class='item' bindtap='goOrder' data-type="2">
+        <image class="icon" src="/images/order/shouhuo.png" background-size="cover"></image>
+        <view class='text'>待收货</view>
+      </view>
+      <view class='item' bindtap='goOrder' data-type="3">
+        <image class="icon" src="/images/order/pj.png" background-size="cover"></image>
+        <view class='text'>待评价</view>
+      </view>
+    </view>
+  </view>
   <view class="my-item">
-    <navigator url="/pages/order-list/index" hover-class="navigator-hover">我的订单</navigator>
+    <image class="my-item-img" src="/images/order-details/icon-address.png"></image>
+    <view class="my-item-title">地址信息</view>
+    <view class="my-item-subtitle">收货地址与信息</view>
+    <!--<navigator url="/pages/select-address/index" hover-class="navigator-hover">-->
+      <!---->
+    <!--</navigator>-->
   </view>
-  <view class='order-shortcut'>
-    <view class='item' bindtap='goOrder' data-type="0">
-      <image class="icon" src="/images/order/topay.png" background-size="cover"></image>
-      <view class='text'>待付款</view>
-    </view>
-    <view class='item' bindtap='goOrder' data-type="1">
-      <image class="icon" src="/images/order/fahuo.png" background-size="cover"></image>
-      <view class='text'>待发货</view>
-    </view>
-    <view class='item' bindtap='goOrder' data-type="2">
-      <image class="icon" src="/images/order/shouhuo.png" background-size="cover"></image>
-      <view class='text'>待收货</view>
-    </view>
-    <view class='item' bindtap='goOrder' data-type="3">
-      <image class="icon" src="/images/order/pj.png" background-size="cover"></image>
-      <view class='text'>待评价</view>
-    </view>
-  </view>
-  <view style="height:10rpx;background: #eee;width:100%;"></view>
   <view class="my-item">
-    <navigator url="/pages/select-address/index" hover-class="navigator-hover">收货地址</navigator>
+    <image class="my-item-img" src="/images/contact_us.png"></image>
+    <view class="my-item-title">联系我们</view>
+    <view class="my-item-subtitle">联系方式与地址</view>
   </view>
-  <view wx:if="{{userMobile}}" class="my-item" style="border:none;padding-right:150rpx;width:auto;">
-    {{userMobile}}
-  </view>
-  <view style="height:20rpx;background: #eee;width:100%;"></view>
-  <view class="about" bindtap="aboutUs">
-    关于我们
-  </view>
-
-  <view style="height:20rpx;background: #eee;width:100%;"></view>
   <view class="my-item" style="border:none;padding:0rpx;margin:0rpx;background:none;border:none;height:auto;line-height:auto;">
     <button type="warn" bindtap="relogin">重新授权登录</button>
   </view>
