--- a/pages/my/index.wxss
+++ b/pages/my/index.wxss
@@ -1,7 +1,11 @@
 .container{
   min-height: 100%;
   overflow: hidden;
-  overflow-y: hidden;
+  background-image: url(https://cdn.it120.cc/apifactory/2019/03/07/1c731c0a355da6c7f0e163fa1917d4d3.png);
+  background-position: 0 -128rpx;
+  background-size: 750rpx auto,1500rpx, auto;
+  background-repeat: no-repeat;
+  background-color: #f8f8f8;
 }
 
 .userinfo {
@@ -9,11 +13,14 @@
 	flex-direction: column;
 	align-items: center;
   width: 750rpx;
+  margin-top: 120rpx;
 }
 .userinfo-avatar {
-	width: 160rpx;
-	height: 160rpx;
+	width: 154rpx;
+	height: 154rpx;
   border-radius: 50%;
+  border: 2px solid #fff;
+  background-color: #b90105;
 }
 .userinfo-nickname {
   margin-top: 20rpx;
@@ -22,21 +29,57 @@
 }
 
 .my-item{
-    width: 100%;
-    background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 750rpx center;
-    background-size: 16rpx auto,750rpx auto;
-    border-bottom: 1px solid #eee;
-    height: 80rpx;
-    line-height: 80rpx;
-    padding-left: 100rpx;
-    font-size:14px;
+  background-color: #fff;
+  width: 100%;
+  /*background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 750rpx center;*/
+  /*background-size: 16rpx auto, 750rpx auto;*/
+  border-bottom: 1px solid #eee;
+  height: 120rpx;
+  line-height: 120rpx;
+  padding-left: 100rpx;
+  display: flex;
 }
+.my-item-img{
+  width: 50rpx;
+  height: 36rpx;
+}
+.my-item-title{
 
+}
+.my-item-subtitle{
+
+}
+navigator{
+  display: flex;
+  justify-content: space-between;
+  font-size: 30rpx;
+}
+.my-order{
+  width: 92%;
+  margin:0rpx 30rpx 30rpx;
+  background-color: #fff;
+  border-radius: 10rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.my-order-title{
+  font-family: PingFang SC Bold, sans-serif;
+  padding: 30rpx 30rpx 0;
+  font-size: 30rpx;
+  font-weight: 600;
+}
+.my-order-title::before{
+  content: "";
+  margin-right: 15rpx;
+  border-left: 5rpx solid;
+  border-left-color: #f22d47;
+}
 .about{
     width: 100%;
     background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 750rpx center;
     background-size: 16rpx auto,750rpx auto;
-    margin: 20rpx 0; 
+    margin: 20rpx 0;
     height: 80rpx;
     line-height: 80rpx;
     padding-left: 100rpx;
