--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -19,8 +19,8 @@
     <video src="{{videoMp4Src}}" autoplay="true" loop="true" style='width:100%'></video>
   </view>
   <view class="goods-info">
-    <view class="goods-title">{{goodsDetail.basicInfo.name}}</view>
     <view class="goods-price" style="padding-left:35rpx;">¥ {{selectSizePrice}}</view>
+    <view class="goods-title">{{goodsDetail.basicInfo.name}}</view>
     <view class="goods-price" style="color:#999;font-size:24rpx;">购买{{goodsDetail.basicInfo.numberOrders}}次</view>
     <view class="goods-price" style="color:#999;font-size:24rpx;">共收到 {{goodsDetail.basicInfo.numberGoodReputation}} 次好评</view>
   </view>
@@ -58,52 +58,7 @@
       <view class="shop-num">({{shopNum}})</view>
       <view style='position:absolute;bottom:10rpx;'> 购物车</view>
     </view>
-    <view wx:if="{{!goodsDetail.basicInfo.pingtuan}}" class="join-shop-cart" bindtap="toAddShopCar">加入购物车</view>
-    <view wx:if="{{!goodsDetail.basicInfo.pingtuan}}" class="now-buy" bindtap="tobuy">立即购买</view>
-  </view>
-  <view class="show-popup" hidden="{{hideShopPopup}}" catchtouchmove="true">
-    <view class="popup-mask" bindtap="closePopupTap"></view>
-    <view class="popup-contents">
-      <view class="pop-goods-info">
-        <view class="pop-img-box">
-          <image src="{{goodsDetail.basicInfo.pic}}" class="goods-thumbnail"/>
-        </view>
-        <view class="pop-goods-des">
-          <view class="pop-goods-title">{{goodsDetail.basicInfo.name}}</view>
-          <view class="pop-goods-price">¥ {{selectSizePrice}}</view>
-        </view>
-        <view class="pop-goods-close" bindtap="closePopupTap"></view>
-      </view>
-      <view class="size-label-box">
-        <block wx:for="{{goodsDetail.properties}}" wx:for-item="property" wx:for-index="idx" wx:key="id">
-          <view class="label">{{property.name}}</view>
-          <view class="label-item-box">
-            <view class="label-item {{item.active ? 'active' : '' }}" wx:for="{{property.childsCurGoods}}" wx:key="id"
-                  bindtap="labelItemTap" data-propertyindex="{{idx}}" data-propertyid="{{property.id}}"
-                  data-propertyname="{{property.name}}" data-propertychildindex="{{index}}"
-                  data-propertychildid="{{item.id}}" data-propertychildname="{{item.name}}">
-              {{item.name}}
-            </view>
-          </view>
-        </block>
-      </view>
-      <view class="buy-num-box">
-        <view class="num-label">购买数量</view>
-        <view class="num-box">
-          <view class="num-jian {{buyNumber == buyNumMin ? 'hui': ''}}" bindtap="numJianTap">-</view>
-          <view class="num-input">
-            <input type="number" value="{{buyNumber}}" disabled/>
-          </view>
-          <view class="num-jia {{buyNumber== buyNumMax ? 'hui': ''}}" bindtap="numJiaTap">+</view>
-        </view>
-      </view>
-      <view class="popup-join-btn" wx:if="{{shopType =='addShopCar'}}" bindtap="addShopCar">
-        加入购物车
-      </view>
-      <view class="popup-join-btn" data-shopType="{{shopType}}"
-            wx:if="{{shopType =='tobuy' || shopType =='toPingtuan'}}" bindtap="buyNow">
-        立即购买
-      </view>
-    </view>
+    <view class="join-shop-cart" bindtap="toAddShopCar">加入购物车</view>
+    <view class="now-buy" bindtap="tobuy">立即购买</view>
   </view>
 </view>
