--- a/pages/goods-details/index.wxss
+++ b/pages/goods-details/index.wxss
@@ -11,14 +11,14 @@
 }
 .swiper_box {
   width: 100%;
-  height:748rpx;
+  height:565rpx;
 }
 
 swiper-item image {
   width: 100%;
   display: inline-block;
   overflow: hidden;
-  height:748rpx;
+  height:100%;
 }
 .swiper-container .dots{
   position: absolute;
@@ -41,6 +41,8 @@ swiper-item image {
   opacity: .6;
 }
 .goods-info{
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   padding: 35rpx 0;
   margin-bottom: 24rpx;
@@ -57,12 +59,10 @@ swiper-item image {
   padding-right: 60px;
 }
 .goods-info .goods-price{
+   font-family: Mark Pro Regular, sans-serif;
    box-sizing:border-box;
-   color:#e64340;
-   font-size: 28rpx;
-   font-weight: bold;
-   width: 30%;
-   float:left;
+   color:#ea5255;
+   font-size: 56rpx;
 }
 .footer-box{
   width: 100%;
@@ -106,7 +106,7 @@ swiper-item image {
 }
 .footer-box .shop-cart-btn .shop-num{
   position: absolute;
-  color:#e64340;
+  color:#ea5255;
   left: 85rpx;
   top:10rpx;
 }
@@ -124,7 +124,7 @@ swiper-item image {
   height: 100%;
   width: 250rpx;
   line-height: 100rpx;
-  background-color: #e64340;
+  background-color: #ea5255;
   color:#fff;
   font-size: 34rpx;
 }
@@ -181,7 +181,7 @@ swiper-item image {
 }
 .pop-goods-price{
   font-size:26rpx;
-  color:#e64340;
+  color:#ea5255;
   margin-top:20rpx;
 }
 .pop-goods-close{
@@ -214,8 +214,8 @@ swiper-item image {
   margin: 0 20rpx 20rpx 0;
 }
 .size-label-box .label-item.active{
-  color: #e64340;
-  border: 1px solid #e64340;
+  color: #ea5255;
+  border: 1px solid #ea5255;
 }
 .buy-num-box{
    display: flex;
@@ -255,7 +255,7 @@ swiper-item image {
   line-height: 89rpx;
   font-size:34rpx;
   color:#ffffff;
-  background-color: #e64340;
+  background-color: #ea5255;
 }
 .buy-num-box .num-box .hui{
   background-color: #f5f5f9;
