--- a/pages/order-list/index.wxml
+++ b/pages/order-list/index.wxml
@@ -1,13 +1,14 @@
 <view class="container">
     <view class="status-box">
         <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}" wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
-            {{item}}
+            <view class="tab-name">{{item}}</view>
             <view class="{{tabClass[index]}}"></view>
         </view>
     </view>
     <view class="no-order" hidden="{{orderList ? true : false}}">
         <image src="/images/no-order.png" class="no-order-img"></image>
-        <view class="text">暂无订单</view>
+        <view class="text">暂无订单，去首页看看</view>
+        <navigator url="/pages/index/index" class="no-order-index-page">首页</navigator>
     </view>
     <view class="order-list" hidden="{{orderList ? false : true}}">
         <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
@@ -28,12 +29,6 @@
                     </view>
                 </scroll-view>
             </view>
-            <view class="price-box">
-                <view class="total-price" wx:if="{{item.score <= 0}}">合计：¥ {{item.amountReal}}</view>
-                <view class="total-price" wx:if="{{item.score > 0}}">合计：¥ {{item.amountReal}} + {{item.score}} 积分</view>
-                <view class="btn cancel-btn" hidden="{{item.status==0? false : true}}" bindtap="cancelOrderTap"  data-id="{{item.id}}">取消订单</view>
-                <view class="btn topay-btn" hidden="{{item.status==0? false : true}}" bindtap="toPayTap" data-id="{{item.id}}" data-money="{{item.amountReal}}" data-score="{{item.score}}">马上付款</view>        
-            </view>  
         </view>
 
     </view>
