--- a/pages/order-list/index.wxml
+++ b/pages/order-list/index.wxml
@@ -1,35 +1,34 @@
 <view class="container">
-    <view class="status-box">
-        <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}" wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
-            <view class="tab-name">{{item}}</view>
-            <view class="{{tabClass[index]}}"></view>
+  <view class="status-box">
+    <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}"
+          wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
+      <view class="tab-name">{{item}}</view>
+      <view class="{{tabClass[index]}}"></view>
+    </view>
+  </view>
+  <view class="no-order" hidden="{{orderList ? true : false}}">
+    <image src="/images/no-order.png" class="no-order-img"></image>
+    <view class="text">暂无订单，去别处看看吧。</view>
+  </view>
+  <view class="order-list" hidden="{{orderList ? false : true}}">
+    <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
+      <view class="order-date">
+        <view class="date-box">下单时间：{{item.dateAdd}}</view>
+        <view class="status {{(item.status==-1 || item.status==4) ? '':'red'}}">{{item.statusStr}}</view>
+      </view>
+      <view class="goods-info" bindtap="orderDetail" data-id="{{item.id}}">
+        <view class="goods-des">
+          <view>订单号:{{item.orderNumber}}</view>
+          <view wx:if="{{item.remark && item.remark != ''}}">备注： {{item.remark}}</view>
         </view>
+      </view>
+      <view>
+        <scroll-view class="goods-img-container" scroll-x="true">
+          <view class="img-box" wx:for-items="{{goodsMap[item.id]}}" wx:key="{{index}}">
+            <image src="{{item.pic}}" class="goods-img"></image>
+          </view>
+        </scroll-view>
+      </view>
     </view>
-    <view class="no-order" hidden="{{orderList ? true : false}}">
-        <image src="/images/no-order.png" class="no-order-img"></image>
-        <view class="text">暂无订单，去首页看看</view>
-        <navigator url="/pages/index/index" class="no-order-index-page">首页</navigator>
-    </view>
-    <view class="order-list" hidden="{{orderList ? false : true}}">
-        <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
-            <view class="order-date">
-                <view class="date-box">下单时间：{{item.dateAdd}}</view>
-                <view class="status {{(item.status==-1 || item.status==4) ? '':'red'}}">{{item.statusStr}}</view>
-            </view>
-            <view class="goods-info" bindtap="orderDetail" data-id="{{item.id}}">
-                <view class="goods-des">
-                   <view>订单号:{{item.orderNumber}} </view>
-                   <view wx:if="{{item.remark && item.remark != ''}}">备注： {{item.remark}}</view>
-                </view>
-            </view>
-            <view >
-                <scroll-view class="goods-img-container" scroll-x="true">
-                    <view class="img-box" wx:for-items="{{goodsMap[item.id]}}" wx:key="{{index}}">
-                        <image src="{{item.pic}}" class="goods-img"></image>
-                    </view>
-                </scroll-view>
-            </view>
-        </view>
-
-    </view>
+  </view>
 </view>
