--- a/pages/order-my/index.wxss
+++ b/pages/order-my/index.wxss
@@ -45,14 +45,26 @@
     background-color: #F2f2f2;
 }
 .no-order-img{
-    width: 81rpx;
-    height: 96rpx;
+    width: 203rpx;
+    height: 214rpx;
     margin-bottom: 31rpx;
 }
 .no-order .text{
     font-size:28rpx;
     color:#999999;
     text-align: center
+}
+.no-order-back{
+  width: 200rpx;
+  height: 54rpx;
+  line-height: 54rpx;
+  margin: auto;
+  color: #fff;
+  font-size: 34rpx;
+  padding: 10rpx 30rpx;
+  background-color: #ff001c;
+  border-radius: 12rpx;
+  margin-top: 40rpx;
 }
 .order-list{
     width: 100%;
