--- a/pages/select-address/index.wxml
+++ b/pages/select-address/index.wxml
@@ -1,19 +1,32 @@
 <view class="container">
     <view class="address-list">
-        <view class="a-address"  wx:for-items="{{addressList}}" wx:key="{{index}}">
-             <view class="left-text {{item.isDefault? 'active':''}}" bindtap="selectTap" data-id="{{item.id}}">
-                 <view class="name-tel">
-                    {{item.linkMan}}  {{item.mobile}}
-                 </view>
-                 <view class="address-box">
-                    {{item.address}}
-                 </view>     
-             </view>   
-             <view class="right-edit" bindtap="editAddess" data-id="{{item.id}}"></view> 
+        <view class="address-item" wx:for-items="{{addressList}}"
+              wx:key="{{index}}" bindtap="selectTap" data-id="{{item.id}}">
+            <view class="name-tel">
+                <view class="name">
+                    {{item.linkMan}}
+                </view>
+                <view class="phone">
+                    {{item.mobile}}
+                </view>
+            </view>
+            <view class="address">
+                {{item.address}}
+            </view>
+            <view class="address-action">
+                <view class="address-default">
+                    <image class="address-check-icon" src="/images/addr-active.png" wx:if="{{item.isDefault}}"></image>
+                    <image class="address-check-icon" src="/images/addr-uncheck.png" wx:if="{{!item.isDefault}}"></image>
+                    <view class="address-default-text">默认地址</view>
+                </view>
+                <view class="address-edit" bindtap="editAddess" data-id="{{item.id}}">
+                    <image src="/images/addr-edit.png" class="address-edit-icon"></image>
+                    <view class="address-edit-text">编辑</view>
+                </view>
+            </view>
         </view>
     </view>
     <view class="bottom-box">
         <view class="add-btn" bindtap="addAddess">新增收货地址</view>
     </view>
-
 </view>
