联系我们页面入口

--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -33,12 +33,12 @@
     <view class="my-item-subtitle">收货地址与信息</view>
     <image class="arrow-right" src="/images/arrow-right.png"></image>
   </navigator>
-  <view class="my-item">
+  <navigator class="my-item" url="/pages/contact-us/index" hover-class="navigator-hover">
     <image class="my-item-img" src="/images/contact_us.png"></image>
     <view class="my-item-title">联系我们</view>
     <view class="my-item-subtitle">联系方式与地址</view>
     <image class="arrow-right" src="/images/arrow-right.png"></image>
-  </view>
+  </navigator>
   <!--<view class="relogin">-->
     <!--<button type="warn" bindtap="relogin">重新授权登录</button>-->
   <!--</view>-->
