--- a/pages/address-add/index.wxss
+++ b/pages/address-add/index.wxss
@@ -1,87 +1,77 @@
-page{
-    height: 100%;
+page {
+  height: 100%;
 }
-.container{
-    background-color: #f5f5f9;
-    justify-content: initial;
+
+.container {
+  font-family: PingFang SC Medium, sans-serif;
+  font-size: 30rpx;
+  color: #000;
+  background-color: #f8f8f8;
 }
-.form-box{
-    width:100%;
-    background-color: #fff;
-    margin-top: 20rpx;
+.phcolor{
+  color: #888;
 }
-.row-wrap{
-    width: 720rpx;
-    height: 88rpx;
-    line-height: 88rpx;
-    margin-left: 30rpx;
-    border-bottom: 1rpx solid #eee;
-    display: flex;
-    font-size: 28rpx;
-    /*justify-content: space-between;*/
+.form-box {
+  width: 100%;
+  background-color: #fff;
+  margin-top: 1rpx;
 }
-.row-wrap .label{
-    width: 160rpx;
-    color: #000
+
+.row-wrap {
+  /*width: 720rpx;*/
+  height: 88rpx;
+  line-height: 88rpx;
+  text-indent: 30rpx;
+  border-bottom: 1rpx solid #e5e5e5;
+  display: flex;
 }
-.row-wrap .label-right{
-    flex: 1;
-    height: 88rpx;
-    line-height: 88rpx;
+
+.row-wrap input {
+  height: 100%;
+  padding-right: 30rpx;
 }
-.row-wrap .label-right input{
-    height: 100%;
-    font-size: 28rpx;
-    padding-right: 30rpx;
-}
-.row-wrap .right-box{
-    margin-right: 30rpx; 
-}
-.arrow-right{
-    width: 15rpx;
-    height: 24rpx;
-}
+
 .save-btn,
-.cancel-btn{
-    width: 690rpx;
-    height: 80rpx;
-    line-height: 80rpx;
-    text-align: center;
-    margin-top:30rpx; 
-    border-radius: 6rpx;
-    box-sizing: border-box;
+.cancel-btn {
+  width: 690rpx;
+  height: 88rpx;
+  font-size: 34rpx;
+  line-height: 88rpx;
+  text-align: center;
+  margin-top: 30rpx;
+  border-radius: 10rpx;
+  box-sizing: border-box;
 }
-.save-btn{
-    background-color: #e64340;
-    color:#fff;
+
+.save-btn {
+  background-color: #e65558;
+  color: #fff;
 }
-button[type="default"]{
-    background-color: #ffffff;
-    color:#000;
+
+button[type="default"] {
+  background-color: #ffffff;
+  color: #000;
 }
-.addr-details{
-    height: auto;
-    padding: 30rpx 0;
-    margin-left:30rpx;
-    border-bottom: 1rpx solid #eee;
-    display: flex;
-    font-size: 28rpx;
+
+.addr-details {
+  height: auto;
+  padding: 30rpx 0;
+  margin-left: 30rpx;
+  border-bottom: 1rpx solid #e5e5e5;
+  display: flex;
 }
-.addr-details .label{
-    margin:auto 0 auto 0;
-    width: 160rpx;
-    color: #000
+
+.addr-details textarea {
+  min-height: 120rpx;
+  width: 100%;
+  overflow: scroll;
 }
-.addr-details textarea{
-    box-sizing: border-box;
-    width: 480rpx;
-    overflow: scroll;
+.addr-default{
+  background-color: #fff;
+  margin-top: 30rpx;
+  padding: 30rpx 0;
+  text-indent: 30rpx;
 }
-picker {
-    min-width: 20rpx;
-    height: 100%;
-    margin-right: 20rpx;
-}
-.hui{
-    color: #777;
+.addr-default-text{
+  text-indent: 30rpx;
 }
