--- a/pages/address-add/index.wxss
+++ b/pages/address-add/index.wxss
@@ -7,32 +7,42 @@ page {
   font-size: 30rpx;
   color: #000;
   background-color: #f8f8f8;
+  -webkit-font-smoothing: antialiased;
+  border-top: 2rpx solid #e5e5e5;
+}
+.form-content{
+  width: 100%;
 }
 .phcolor{
+  font-family: PingFang SC Medium, sans-serif;
   color: #888;
 }
 .form-box {
   width: 100%;
   background-color: #fff;
-  margin-top: 1rpx;
+}
+.form-box input, .form-box textarea{
+  caret-color: #0087ff;
+  padding-left: 30rpx;
 }
 
 .row-wrap {
-  /*width: 720rpx;*/
+  display: flex;
+  width: 100%;
   height: 88rpx;
   line-height: 88rpx;
-  text-indent: 30rpx;
   border-bottom: 1rpx solid #e5e5e5;
-  display: flex;
 }
 
 .row-wrap input {
   height: 100%;
   padding-right: 30rpx;
 }
+.row-wrap[name="mobile"]{
+  font-family: Mark Pro Regular, sans-serif;
+}
 
-.save-btn,
-.cancel-btn {
+.save-btn, .cancel-btn {
   width: 690rpx;
   height: 88rpx;
   font-size: 34rpx;
@@ -44,8 +54,9 @@ page {
 }
 
 .save-btn {
-  background-color: #e65558;
+  background-color: #ff001c;
   color: #fff;
+  margin-top: 50rpx;
 }
 
 button[type="default"] {
@@ -54,19 +65,20 @@ button[type="default"] {
 }
 
 .addr-details {
+  display: flex;
   height: auto;
   padding: 30rpx 0;
-  margin-left: 30rpx;
   border-bottom: 1rpx solid #e5e5e5;
-  display: flex;
 }
 
 .addr-details textarea {
   min-height: 120rpx;
+  line-height: 1;
   width: 100%;
   overflow: scroll;
 }
 .addr-default{
+  color: #000;
   background-color: #fff;
   margin-top: 30rpx;
   padding: 30rpx 0;
@@ -74,4 +86,36 @@ button[type="default"] {
 }
 .addr-default-text{
   text-indent: 30rpx;
+}
+
+.dialog{
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 34rpx;
+  text-align: center;
+  background-color: rgba(127,127,127,.5);
+  z-index: 2;
+}
+.dialog-content{
+  width: 540rpx;
+  height: 258rpx;
+  margin-top: 434rpx;
+  background-color: #fff;
+  border-radius: 20rpx;
+  z-index: 3;
+}
+.tip-text{
+  line-height: 1.2;
+  padding: 48rpx 24rpx 43rpx 26rpx;
+  font-weight: lighter;
+  color: #404040;
+  border-bottom: 1rpx solid #d9d9d9;
+}
+.tip-ok{
+  height: 88rpx;
+  line-height: 88rpx;
+  color: #ff0000;
 }
