--- a/pages/address-add/index.wxss
+++ b/pages/address-add/index.wxss
@@ -90,8 +90,6 @@ button[type="default"] {
 
 .dialog{
   position: fixed;
-  display: flex;
-  justify-content: center;
   width: 100%;
   height: 100%;
   font-size: 34rpx;
@@ -100,9 +98,12 @@ button[type="default"] {
   z-index: 2;
 }
 .dialog-content{
+  position: absolute;
+  top: 434rpx;
+  left: 0;
+  right: 0;
   width: 540rpx;
-  height: 258rpx;
-  margin-top: 434rpx;
+  margin: auto;
   background-color: #fff;
   border-radius: 20rpx;
   z-index: 3;
