样式，间距优化

--- a/pages/address-add/index.wxml
+++ b/pages/address-add/index.wxml
@@ -10,7 +10,7 @@
                        placeholder="手机号码" value="{{addressData.mobile}}{{wxaddress.telNumber}}"/>
             </view>
             <view class="addr-details">
-            <textarea name="address" auto-height placeholder="详细地址：县镇+街道+道路门牌号+企业单位地址名称"
+            <textarea name="address" placeholder="详细地址：县镇+街道+道路门牌号+企业单位地址名称"
                       placeholder-class="phcolor" value="{{addressData.address}}{{wxaddress.detailInfo}}"/>
             </view>
         </view>
@@ -20,10 +20,10 @@
                 <view class="switch__core {{isDefault?'switch__on': 'switch__off'}}"></view>
             </view>
         </view>
+        <view type="default" class="addr-del" bindtap="deleteAddress" data-id="{{addressData.id}}"
+                wx:if="{{addressData}}">删除地址
+        </view>
         <button class="save-btn" formType="submit">保存</button>
-        <button type="default" class="save-btn" bindtap="deleteAddress" data-id="{{addressData.id}}"
-                wx:if="{{addressData}}">删除该地址
-        </button>
         <!--<button type="default" class="cancel-btn" bindtap="bindCancel">取消</button>-->
     </form>
     <view class="dialog" wx:if="{{tipText}}">
